<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/font_size_entries"
        android:entryValues="@array/font_size_value"
        android:key="pref_font_size"
        android:summary="%s"
        android:title="@string/title_pref_font_size" />

    <ListPreference
        android:defaultValue="ru"
        android:entries="@array/language_select"
        android:entryValues="@array/language_select_value"
        android:key="pref_language"
        android:summary="%s"
        android:title="@string/title_language" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/ui_mode_night"
        android:entryValues="@array/ui_mode_night_value"
        android:key="pref_ui_mode_night"
        android:summary="%s"
        android:title="@string/title_pref_ui_mode_night" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_speed_enabled"
        android:summary="@string/summary_pref_speed_enabled"
        android:title="@string/title_pref_speed_enabled" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_confirm_remove"
        android:summary="@string/summary_pref_confirm_remove"
        android:title="@string/title_pref_confirm_remove" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_start_scan_immediate"
        android:summary="@string/summary_pref_start_scan_immediate"
        android:title="@string/title_pref_start_scan_immediate" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_double_column_display"
        android:summary="@string/summary_pref_double_column_display"
        android:title="@string/title_pref_double_column_display" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_group_all_display"
        android:summary="@string/summary_pref_group_all_display"
        android:title="@string/title_pref_group_all_display" />

    <ListPreference
        android:defaultValue="smart"
        android:entries="@array/connection_mode_entries"
        android:entryValues="@array/connection_mode_values"
        android:key="pref_connection_mode"
        android:summary="%s"
        android:title="@string/title_pref_connection_mode" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_auto_select_profile"
        android:summary="@string/summary_pref_auto_select_profile"
        android:title="@string/title_pref_auto_select_profile" />

</PreferenceScreen>
