<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:key="pref_fragment_enabled"
        android:title="@string/title_pref_fragment_enabled" />

    <ListPreference
        android:defaultValue="tlshello"
        android:entries="@array/fragment_packets"
        android:entryValues="@array/fragment_packets"
        android:key="pref_fragment_packets"
        android:summary="%s"
        android:title="@string/title_pref_fragment_packets" />

    <EditTextPreference
        android:key="pref_fragment_length"
        android:summary="50-100"
        android:title="@string/title_pref_fragment_length" />

    <EditTextPreference
        android:key="pref_fragment_interval"
        android:summary="10-20"
        android:title="@string/title_pref_fragment_interval" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_noise_enabled"
        android:summary="@string/summary_pref_noise_enabled"
        android:title="@string/title_pref_noise_enabled" />

    <CheckBoxPreference
        android:key="pref_mux_enabled"
        android:summary="@string/summary_pref_mux_enabled"
        android:title="@string/title_pref_mux_enabled" />

    <EditTextPreference
        android:inputType="number"
        android:key="pref_mux_concurrency"
        android:summary="8"
        android:title="@string/title_pref_mux_concurency" />

    <EditTextPreference
        android:inputType="number"
        android:key="pref_mux_xudp_concurrency"
        android:summary="8"
        android:title="@string/title_pref_mux_xudp_concurency" />

    <ListPreference
        android:defaultValue="reject"
        android:entries="@array/mux_xudp_quic_entries"
        android:entryValues="@array/mux_xudp_quic_value"
        android:key="pref_mux_xudp_quic"
        android:summary="%s"
        android:title="@string/title_pref_mux_xudp_quic" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_ip_type"
        android:entryValues="@array/pref_ip_type_values"
        android:key="pref_ip_type"
        android:summary="%s"
        android:title="@string/title_pref_ip_type" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_xray_tun_enabled"
        android:title="@string/title_pref_xray_tun_enabled" />

    <EditTextPreference
        android:defaultValue="1500"
        android:inputType="number"
        android:key="pref_xray_tun_mtu"
        android:summary="@string/settings_mtu_info"
        android:title="@string/settings_xray_tun_mtu" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_block_bindtodevice_enabled"
        android:title="@string/title_pref_block_bindtodevice_enabled" />

</PreferenceScreen>
